--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Provisions</title>
 
-    <script src="HTTPS://code.jquery.com/jquery-1.12.3.js"></script>
-<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-<link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
-
-
+  <script src="HTTPS://code.jquery.com/jquery-1.12.3.js"></script>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+	<link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
+	
 <script>
+$( function() {
+    $( "#tabs" ).tabs();
+ } );
+	
 $(document).ready(function() {
 	$.get("/stats", function(data) {   
            $('#stats').append(data);
@@ -36,8 +41,16 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<div id="stats"></div>
-<table id="example" class="display" cellspacing="0" width="100%">
+	<div id="tabs">
+  <ul>
+    <li><a href="#tabs-1">CAP Statistics</a></li>
+    <li><a href="#tabs-2">CAP Instance Details</a></li>
+  </ul>
+  <div id="tabs-1">
+		<div id="stats"></div>
+	</div>
+  <div id="tabs-2">
+		<table id="example" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Date</th>
@@ -67,6 +80,7 @@ $(document).ready(function() {
             </tr>
         </tfoot>
     </table>
-
+	</div>
+</div>
 </body>
 </html>
