--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,9 @@ $(document).ready(function() {
         "columns": [
             { "data": "date" },
             { "data": "localization" },
-            { "data": "part1" },
-            { "data": "part2" },
-            { "data": "part3" },
-			{ "data": "part4" },
-			{ "data": "part5" },
-			{ "data": "part6" },
-			{ "data": "userhost" },
+            { "data": "ips" },
+            { "data": "SVersion" },
+	    { "data": "userhost" },
             { "data": "_id" }
         ]
     } );
@@ -55,12 +51,8 @@ $(document).ready(function() {
             <tr>
                 <th>Date</th>
                 <th>Market</th>
-                <th>CAP 1</th>
-                <th>CAP 2</th>
-                <th>CAP 3</th>
-                <th>CAP 4</th>
-				<th>CAP 5</th>
-				<th>CAP 6</th>
+                <th>IPs</th>
+                <th>SVersion</th>
 				<th>User</th>
 				<th>TimeStamp</th>
             </tr>
@@ -69,12 +61,8 @@ $(document).ready(function() {
             <tr>
                 <th>Date</th>
                 <th>Market</th>
-                <th>CAP 1</th>
-                <th>CAP 2</th>
-                <th>CAP 3</th>
-                <th>CAP 4</th>
-				<th>CAP 5</th>
-				<th>CAP 6</th>
+                <th>IPs</th>
+                <th>SVersion</th>
 				<th>User</th>
 				<th>TimeStamp</th>
             </tr>
