--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@ $(document).ready(function() {
             { "data": "localization" },
             { "data": "ips" },
             { "data": "SVersion" },
+	    { "data": "datacenter" },
 	    { "data": "userhost" },
             { "data": "_id" }
         ]
@@ -52,7 +53,8 @@ $(document).ready(function() {
                 <th>Date</th>
                 <th>Market</th>
                 <th>IPs</th>
-                <th>SVersion</th>
+                <th>Script Ver</th>
+		    <th>Data Center</th>
 				<th>User</th>
 				<th>TimeStamp</th>
             </tr>
@@ -62,7 +64,8 @@ $(document).ready(function() {
                 <th>Date</th>
                 <th>Market</th>
                 <th>IPs</th>
-                <th>SVersion</th>
+                <th>Script Ver</th>
+		    <th>Data Center</th>
 				<th>User</th>
 				<th>TimeStamp</th>
             </tr>
