--- a/public/index.html
+++ b/public/index.html
@@ -12,66 +12,34 @@
 	<link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
 	
 <script>
+function getSearchParams(k){
+ var p={};
+ location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi,function(s,k,v){p[k]=v})
+ return k?p[k]:p;
+}
+	
 $( function() {
     $( "#tabs" ).tabs();
  } );
 	
 $(document).ready(function() {
-	$.get("/stats", function(data) {   
-           $('#stats').append(data);
+	$.get("/cluster?ip=" & getSearchParams(ip), function(data) {   
+           $('#cluster').append(data);
         });
-	
-    $('#example').DataTable( {
-        "ajax": "/cap",
-        "columns": [
-            { "data": "date" },
-            { "data": "localization" },
-            { "data": "ips" },
-            { "data": "SVersion" },
-	    { "data": "datacenter" },
-	    { "data": "userhost" },
-            { "data": "_id" }
-        ]
-    } );
 } );
 
 </script>
 </head>
 <body>
-	<div id="tabs">
+<div id="tabs">
   <ul>
-    <li><a href="#tabs-1">CAP Statistics</a></li>
-    <li><a href="#tabs-2">CAP Instance Details</a></li>
+    <li><a href="#tabs-1">Your CAP Cluster</a></li>
+    <li><a href="#tabs-2">Documentation</a></li>
+    <li><a href="#tabs-2">Demos</a></li>
   </ul>
-  <div id="tabs-1">
-		<div id="stats"></div>
-	</div>
-  <div id="tabs-2">
-		<table id="example" class="display" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Market</th>
-                <th>IPs</th>
-                <th>Script Ver</th>
-		    <th>Data Center</th>
-				<th>User</th>
-				<th>TimeStamp</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th>Date</th>
-                <th>Market</th>
-                <th>IPs</th>
-                <th>Script Ver</th>
-		    <th>Data Center</th>
-				<th>User</th>
-				<th>TimeStamp</th>
-            </tr>
-        </tfoot>
-    </table>
-	</div>
+  <div id="tabs-1"><div id="cluster"></div></div>
+  <div id="tabs-2"><div id="documentation"></div></div>
+  <div id="tabs-3"><div id="demos"></div></div>
 </div>
 </body>
 </html>
