--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,12 @@ $(document).ready(function() {
     <li><a href="#tabs-2">Demos</a></li>
   </ul>
   <div id="tabs-1"><div id="cluster"></div></div>
-  <div id="tabs-2"><div id="documentation"></div></div>
-  <div id="tabs-3"><div id="demos"></div></div>
+  <div id="tabs-2"><div id="documentation">
+	  <iframe src="https://ibm.ent.box.com/embed/s/3nvmn5f4ficnnez6hk3jpzfi3nmmtd4f?sortColumn=date&view=list" width="800" height="550" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
+	  </div></div>
+  <div id="tabs-3"><div id="demos">
+	  <iframe src="https://ibm.ent.box.com/embed/s/5ddn39y2t3pe9nnkdkpctos5fix3918t?sortColumn=date&view=list" width="800" height="550" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
+	  </div></div>
 </div>
 </body>
 </html>
