--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@ $( function() {
  } );
 	
 $(document).ready(function() {
-	$.get("/cluster?ip=" & getSearchParams(ip), function(data) {   
+	$.get("/cluster?ip=" & getSearchParams("ip"), function(data) {   
            $('#cluster').append(data);
         });
 } );
