--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
 
 		  var items = [];
   $.each( data, function( key, val ) {
-    items.push( "<div id='mybox' class='ui-widget ui-widget-content ui-corner-all' style='margin-top:20px; width:300px; height: 150px;'><h3 class='ui-widget-header'>" + key + "</h3><p><span class='ui-icon ui-icon-comment' style='margin: 0 2px 0 2px; float:left;'></span>" + val + "</p></div>" );
+    items.push( "<div id='mybox' class='ui-widget ui-widget-content ui-corner-all' style='margin-top:5px; width:300px; height: 150px;'><h3 class='ui-widget-header'>" + key + "</h3><p>" + val.des + "</p><p>Passwords: " + val.passwords + "</p><p>" + val.link + "</p></div>" );
   });
            $('#cluster').append(items.join( "" ));
         });
