--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <script src="HTTPS://code.jquery.com/jquery-1.12.3.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-	<link rel="stylesheet" href="/cssSheet.css">
+	<link rel="stylesheet" type="text/css" href="/cssSheet.css">
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
 $.urlParam = function(name){
