--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
            	$('#demos').append(data);
         });
 	$.get("/blog?key=" + $.urlParam('key'), function(data) {   
-           	$('#demos').append(data);
+           	$('#blog').append(data);
         });
 } );
 
