--- a/public/index.html
+++ b/public/index.html
@@ -46,15 +46,17 @@ $(document).ready(function() {
 <body>
 <div id="tabs">
   <ul>
-    <li><a href="#tabs-1">Your CAP Cluster</a></li>
-    <li><a href="#tabs-2">Documentation</a></li>
-    <li><a href="#tabs-3">Demo Source Materials</a></li>
-    <li><a href="#tabs-4">Demo Blogs & Videos</a></li>
+    <li><a href="#tabs-1">Home</a></li>
+    <li><a href="#tabs-2">Docs</a></li>
+    <li><a href="#tabs-3">Demos</a></li>
+    <li><a href="#tabs-4">Videos</a></li>
+    <li><a href="#tabs-5">Log</a></li>
   </ul>
   <div id="tabs-1"><div id="cluster"></div></div>
   <div id="tabs-2"><div id="documentation"></div></div>
   <div id="tabs-3"><div id="demos"></div></div>
   <div id="tabs-4"><div id="blog"></div></div>
+  <div id="tabs-5"><div id="log"></div></div>
 </div>
 </body>
 </html>
