--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -22,6 +22,7 @@ $(document).ready(function() {
         });
 	
     $('#example').DataTable( {
+	"order": [[ 6, "desc" ]],
         "ajax": "/cap",
         "columns": [
             { "data": "date" },
