--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -13,7 +13,7 @@
 	
 <script>
 $( function() {
-    $( "#tabs" ).tabs();
+    $( "#tabs" ).tabs({ selected: 1 });
  } );
 	
 $(document).ready(function() {
