--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <script>
 $.urlParam = function(name){
 	var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
-	return results[1] || 0;
+	return (typeof results === 'undefined') ? "" : results[1];
 }
 	
 $( function() {
