--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 <script>
 $.urlParam = function(name){
 	var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
-	return (typeof results === 'undefined') ? "" : results[1];
+	if (typeof results[1] === 'undefined')
+		return "";
+	else 
+		return results[1];
 }
 	
 $( function() {
