--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -22,8 +22,8 @@ $(document).ready(function() {
         });
 	
     $('#example').DataTable( {
-	    buttons: ['copy', 'excel', 'pdf'],
-	"order": [[ 1, "desc" ]],
+	    "buttons": ["copy", "excel", "pdf"],
+	"order": [[ 0, "desc" ]],
         "ajax": "/cap",
         "columns": [
             { "data": "date" },
