--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,11 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Provisions</title>
-	
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/ju-1.11.4/jqc-1.12.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.3.1/b-html5-1.3.1/datatables.min.css"/>
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/ju-1.11.4/jqc-1.12.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.3.1/b-flash-1.3.1/b-html5-1.3.1/b-print-1.3.1/datatables.min.css"/>
  
-<script type="text/javascript" src="https://cdn.datatables.net/v/ju-1.11.4/jqc-1.12.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.3.1/b-html5-1.3.1/datatables.min.js"></script>	
-<script>
+	<script type="text/javascript" src="https://cdn.datatables.net/v/ju-1.11.4/jqc-1.12.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.3.1/b-flash-1.3.1/b-html5-1.3.1/b-print-1.3.1/datatables.min.js"></script>
+	<script>
 $( function() {
     $( "#tabs" ).tabs({ selected: 1 });
  } );
@@ -19,7 +18,8 @@ $(document).ready(function() {
         });
 	
     $('#example').DataTable( {
-	    "buttons": ["copy", "excel", "pdf"],
+	    "dom": 'Bfrtip',
+	    "buttons": ['copy', 'excel', 'pdf'],
 	"order": [[ 0, "desc" ]],
         "ajax": "/cap",
         "columns": [
