--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -25,7 +25,7 @@ $(document).ready(function() {
 	
     $('#example').DataTable( {
 	    "dom": 'Bfrtip',
-	    "buttons": ['copy', 'pdf'],
+	    "buttons": ['copy','excel' 'pdf'],
 	"order": [[ 0, "desc" ]],
         "ajax": "/cap",
         "columns": [
