--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -14,20 +14,26 @@
 	<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.3.1/b-flash-1.3.1/b-html5-1.3.1/b-print-1.3.1/datatables.min.js"></script>
 	
 	<script>
-$( function() {
-    $( "#tabs" ).tabs({ "selected": 2 });
- } );
+
+		
+$.urlParam = function(name){
+    var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+    if (results==null){
+       return null;
+    }
+    else{
+       return decodeURI(results[1]) || 0;
+    }
+}
 	
 $(document).ready(function() {
-	$.get("/stats", function(data) {   
-           $('#stats').append(data);
-        });
+	
 	
     $('#example').DataTable( {
 	    "dom": 'Bfrtip',
 	    "buttons": ['copy','excel', 'pdf'],
 	"order": [[ 0, "desc" ]],
-        "ajax": "/cap",
+        "ajax": "/cap?u=" + $.urlParam('user');,
         "columns": [
             { "data": "date" },
             { "data": "ips" },
@@ -41,15 +47,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<div id="tabs">
-  <ul>
-    <li><a href="#tabs-1">CAP Statistics</a></li>
-    <li><a href="#tabs-2">CAP Instance Details</a></li>
-  </ul>
-  <div id="tabs-1">
-		<div id="stats"></div>
-	</div>
-  <div id="tabs-2">
+<div id="tabs-2">
 		<table id="example" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
@@ -70,7 +68,6 @@ $(document).ready(function() {
             </tr>
         </tfoot>
     </table>
-	</div>
 </div>
 </body>
 </html>
