--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
 	    "dom": 'Bfrtip',
 	    "buttons": ['copy','excel', 'pdf'],
 	"order": [[ 0, "desc" ]],
-        "ajax": "/cap?u=" + $.urlParam('user');,
+        "ajax": "/cap?u=" + $.urlParam('user'),
         "columns": [
             { "data": "date" },
             { "data": "ips" },
