--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
 </head>
 <body>
 <div id="tabs">
-		<table id="example" class="display" cellspacing="0" width="100%">
+		<table id="example" class="display ui-widget ui-widget-content" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Date</th>
