--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -53,7 +53,7 @@ $(document).ready(function() {
                 <th>Date</th>
                 <th>External IPs</th>
 		<th>Internal IPs</th>
-                <th>Script Ver</th>
+                <th>CAP Version</th>
 		<th>User</th>
             </tr>
         </thead>
@@ -62,7 +62,7 @@ $(document).ready(function() {
                 <th>Date</th>
                 <th>External IPs</th>
 		<th>Internal IPs</th>
-                <th>Script Ver</th>
+                <th>CAP Version</th>
 		<th>User</th>
             </tr>
         </tfoot>
